# personal-website

./: .gitignore  .mcp.json  AI_README.md  README.md  docker-compose.yml  nx.json  package-lock.json  package.json
.github/: pull_request_template.md
.github/scripts/: annotate-release-tag.sh  deploy-infra.sh  retag-non-affected.sh  setup-k8s.sh
.github/templates/: kubeconfig-token.yaml  kubeconfig.yaml
.github/workflows/: ci.yml  deploy.yml  e2e.yml  manual-deploy.yml  pr-validation.yml
apps/backend/: .dockerignore  AI_README.md  Dockerfile  README.md  config.py  main.py  project.json  pyproject.toml  test_vector_search.py
apps/backend/helm/: Chart.yaml  K8S_SECRETS_GUIDE.md  QUICK_START.md  secrets.example.yaml  values.yaml
apps/backend/helm/templates/: deployment.yaml  service.yaml
apps/backend/models/: chat.py  document.py
apps/backend/routers/: chat.py  documents.py
apps/backend/services/: document_service.py  rag_service.py  vector_store.py
apps/backend/tests/: test_main.py
apps/backend/utils/: file_parser.py
apps/frontend/: .dockerignore  AI_README.md  Dockerfile  README.md  next.config.ts  package.json  project.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vitest.config.ts
apps/frontend-e2e/: package.json  playwright.config.ts  project.json
apps/frontend-e2e/tests/: example.spec.ts
apps/frontend/helm/: values.yaml
apps/frontend/helm/templates/: deployment.yaml  (+1 more)
apps/frontend/src/: config.ts  middleware.ts
apps/frontend/test/: postcss.config.cjs
helm/: Chart.yaml  values.yaml
helm/templates/: ingress.yaml
(+36 files in other folders)
