[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Nx monorepo"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0"
]
requires-python = ">=3.10"

[tool.setuptools.packages]
find = {}

[project.optional-dependencies]
dev = [
    "ruff>=0.8.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.25.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"